added link back

--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -166,6 +166,12 @@
       'heaviest' ones. Once these are marked, a summary text is stitched together and out comes the final result.
     </p>
     <img src="../assets/img/donate.png" alt="" class="m-auto flex">
+    <p class="max-w-lg  leading-loose mb-2 text-center">
+      If successful, this function will be added to the trendy dots research platform. Check it out: <a
+        href="https://trendydots.com/invest/project" target="_blank"> <img src="../assets/img/td-research.png"
+          class="shadow" style="border-radius: 6px; border:1px solid #eeeeee"> </a>
+    </p>
+    <br><br>
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left">
       <i> This experiment is a 'donation enabled freemium'. I hope you don't mid me giving you the opportunity to
         donate. It will help me improve the software quality
