--- a/project.html
+++ b/project.html
@@ -158,15 +158,17 @@
   <section class="bg-white py-4 font-sans">
     <div class="container max-w-xl m-auto flex flex-wrap items-baseline ">
 
-      <a target="_blank" href="https://trendydots.com/oskar/" style="height:250px; text-decoration: none; color:black;"
+      <a target="_blank" href="http://trendydots.com/research/nlp/"
+        style="height:250px; text-decoration: none; color:black;"
         class="w-full md:w-1/3 lg:w-1/3 flex flex-col mb-8 px-3 ">
-        <div class="overflow-hidden bg-white text-center rounded-lg shadow-md hover:translateY-2px transition h-full">
-          <img style="height: 2em;" src="./osk.png" alt="Sunset in the mountains">
+        <div class="overflow-hidden bg-white text-center rounded-lg shadow-md hover:translateY-2px transition h-full"
+          style="padding-top: 5%;">
+          <img style="height: 2em;" src="./nlp.png" alt="natural language processing">
           <div class="p-6 flex flex-col justify-between ">
-            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Oskar</h3>
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">NLP</h3>
             <p class="inline-flex items-center">
-              <span class="text-grey-dark text-sm">Oskar is our latest AI experiment which we hope will
-                recommend the proper attire for the proper occasion.</span>
+              <span class="text-grey-dark text-sm">A series of experiments around AI text processing. Summarizing
+                language independent texts, extracting tokens, hashtag autosuggest and so much more. </span>
             </p>
           </div>
         </div>
@@ -175,7 +177,8 @@
       <a target="_blank" href="https://trendydots.com/invest/project"
         style="height:250px; text-decoration: none; color:black;"
         class="w-full md:w-1/3 lg:w-1/3 flex flex-col mb-8 px-3 ">
-        <div class="overflow-hidden bg-white text-center rounded-lg shadow-md hover:translateY-2px transition h-full">
+        <div class="overflow-hidden bg-white text-center rounded-lg shadow-md hover:translateY-2px transition h-full"
+          style="padding-top: 5%;">
           <img style="height: 2em" src="./tdmr.png" alt="Sunset in the mountains">
           <div class="p-6 flex flex-col justify-between ">
             <h3 class="font-medium text-grey-darkest mb-4 leading-normal"><i>"it links the links"</i></h3>
@@ -193,7 +196,8 @@
       <a target="_blank" href="https://trendydots.com/data4good/"
         style="height:250px; text-decoration: none; color:black;"
         class="w-full md:w-1/3 lg:w-1/3 flex flex-col mb-8 px-3 ">
-        <div class="overflow-hidden bg-white text-center rounded-lg shadow-md hover:translateY-2px transition h-full">
+        <div class="overflow-hidden bg-white text-center rounded-lg shadow-md hover:translateY-2px transition h-full"
+          style="padding-top: 5%;">
           <img style="height: 2em" src="./d4g.png" alt="Sunset in the mountains">
           <div class="p-6 flex flex-col justify-between ">
             <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
