--- a/project.html
+++ b/project.html
@@ -201,14 +201,13 @@
           <img style="height: 2em" src="./d4g.png" alt="Sunset in the mountains">
           <div class="p-6 flex flex-col justify-between ">
             <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
-              Data for good
+              Volunteering
             </h3>
             <p class="inline-flex items-center">
               <span class="text-grey-dark text-sm">
                 Teams of data scientists, developers
                 and designers working with NGOs and social enterprises to solve complex challenges and identify new
-                social
-                impact opportunities.
+                social impact opportunities.
               </span>
             </p>
           </div>
