--- a/oskar/index.html
+++ b/oskar/index.html
@@ -19,13 +19,17 @@
   <nav style="max-width: 100%; position: fixed; top:0; z-index: 1000"
     class="font-serif bg-white text-center flex justify-between py-4 overflow-hidden px-4 w-screen border-b">
     <span class="flex items-center">
+      <span class="text-lg flex text-left" style="font-size: 1rem; margin-left: 1em; margin-right: 0.8em">
+        <b>OSKAR</b>
+      </span>
+
       <a href="./index.html" class="inline-block text-left flex items-center"
         style="text-decoration: none; color:black">
-        <img src="./img/logo2.png" class="h-8 sm:h-8" alt="logo" />
+        <img src="./img/writing.png" class="h-8 sm:h-8" alt="logo" />
       </a>
 
       <span class="text-lg flex text-left" style="font-size: 1rem;">
-        &nbsp; AI
+        AI
       </span>
     </span>
 
