added proper patron link

--- a/invest/index.html
+++ b/invest/index.html
@@ -40,7 +40,7 @@
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" data-aos-easing="ease" data-aos-delay="300"
   data-aos="fade-in">
   <nav
-    class="font-sans bg-white text-center flex md:justify-between items-center md:flex-row flex-col p-4 container overflow-hidden"
+    class="font-sans bg-white text-center flex md:justify-between items-center md:flex-row flex-col px-4 py-2 container overflow-hidden"
     style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100; 
@@ -57,9 +57,9 @@
     </span>
 
     <div class="flex">
-      <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
-        data-aos="fade-in">Become a
-        Patron!</a>
+      <a style="display: inline;" href="https://www.patreon.com/bePatron?u=14590376">
+        <img src="./assets/img/patreon-btn.png" alt="Become a patron" style="height:45px">
+      </a>
     </div>
 
     <!-- 
