--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -18,264 +18,47 @@
 
 </head>
 
-<body class="overflow-hidden font-sans">
+<body class="overflow-hidden font-sans" style="background: #fafafa">
 
   <!-- the web elements section -->
-  <section class="fixed pin-l pin-t pin-b overflow-y-scroll bg-white w-1/2">
-    <div class="fixed font-black bg-white w-1/2" style="z-index: 100">
+  <section class="fixed pin-l pin-t pin-b overflow-y-scroll w-1/2">
+    <div class="fixed font-black bg-white w-1/2 mb-3 " style="z-index: 100">
       <h2 class="pb-2 pt-1 mx-3" style="font-weight: 800; display: flex; flex-direction: row">
-        <a href="/" class="no-underline text-black transition">
+        <a href="/" class="no-underline text-black transition" style="line-height: 1.8em">
           <img src="https://trendydots.com/logo.png" class="inline-block mr-2 w-10 -mb-2" />web stitches</a>
         <div style="flex:auto"></div>
         <a style="display: inline;" href="https://www.patreon.com/bePatron?u=14590376">
           <img src="./images/patreon-btn.png" alt="Become a patron" style="height: 1.8em">
         </a>
       </h2>
-      <div class="border-b-2 mb-3 js-filter pl-3 border-grey-light">
-        <!-- General -->
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
+      <div class="border-b-2 js-filter pl-3 border-grey-light text-center">
+        <button id="all-snippet-tab" class="text-black font-semibold snippet-tab px-2 py-1 transition-normal"
           data-filter="js-snippet">
           All
         </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-navigation">
-          Navigation
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-footer">
-          Footer
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-form">
-          Form
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-list">
-          List
+        <!-- General -->
+        <button class="text-black font-semibold snippet-tab px-2 py-1 transition-normal" data-filter="st-basic">
+          Basics
         </button>
         <!-- Marketing -->
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-hero">
-          Hero
+        <button class="text-black font-semibold snippet-tab px-2 py-1 transition-normal" data-filter="st-marketing">
+          Marketing
         </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-feature">
-          Features
+        <button class="text-black font-semibold snippet-tab px-2 py-1 transition-normal" data-filter="st-dataviz">
+          Data Viz.
         </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-pricing">
-          Pricing
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-article">
-          Articles
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-cta">
-          Call to Action
-        </button>
-        <!-- Application -->
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-progress">
-          Progress Bar
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-feed">
-          Feed/Comments
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-notification">
-          Notification
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-stats">
-          Stats
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-cards">
-          Cards
-        </button>
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal" data-filter="st-tabs">
-          Tabs
-        </button>
-
-        <button class="text-black font-semibold hover:text-u-orange px-2 py-1 transition-normal"
-          data-filter="st-charts">
-          Charts
-        </button>
-
       </div>
     </div>
-    <div class="js-snippets inline-flex flex-wrap flex-col" style="margin-top: 150px">
-      <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-1">
-        <img src="./images/templates/navigation-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-2">
-        <img src="./images/templates/navigation-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-3">
-        <img src="./images/templates/navigation-3.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-4">
-        <img src="./images/templates/navigation-4.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-1">
-        <img src="./images/templates/hero-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-2">
-        <img src="./images/templates/hero-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-3">
-        <img src="./images/templates/hero-3.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-1">
-        <img src="./images/templates/footer-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-2">
-        <img src="./images/templates/footer-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-3">
-        <img src="./images/templates/footer-3.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-feature" id="features-1">
-        <img src="./images/templates/features-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-feature" id="features-2">
-        <img src="./images/templates/features-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-feature" id="features-3">
-        <img src="./images/templates/features-3.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-feature" id="features-4">
-        <img src="./images/templates/features-4.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-feature" id="features-5">
-        <img src="./images/templates/features-5.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-feature" id="features-6">
-        <img src="./images/templates/features-6.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-pricing" id="pricing-1">
-        <img src="./images/templates/pricing-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-pricing" id="pricing-2">
-        <img src="./images/templates/pricing-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-article" id="articles-1">
-        <img src="./images/templates/articles-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-article" id="articles-2">
-        <img src="./images/templates/articles-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-1">
-        <img src="./images/templates/cta-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-2">
-        <img src="./images/templates/cta-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-form" id="form-1">
-        <img src="./images/templates/form-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-form" id="form-2">
-        <img src="./images/templates/form-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-progress" id="progress-1">
-        <img src="./images/templates/progress-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-list" id="list-1">
-        <img src="./images/templates/list-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-list" id="list-2">
-        <img src="./images/templates/list-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-feed" id="feed-1">
-        <img src="./images/templates/feed-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-notification" id="notification-1">
-        <img src="./images/templates/notification-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-notification" id="notification-2">
-        <img src="./images/templates/notification-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-1">
-        <img src="./images/templates/stats-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-2">
-        <img src="./images/templates/stats-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-1">
-        <img src="./images/templates/cards-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-2">
-        <img src="./images/templates/cards-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-tabs" id="tabs-1">
-        <img src="./images/templates/tabs-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-1">
-        <img src="./images/templates/charts-1.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-2">
-        <img src="./images/templates/charts-2.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-3">
-        <img src="./images/templates/charts-3.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-4">
-        <img src="./images/templates/charts-4.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-5">
-        <img src="./images/templates/charts-5.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-6">
-        <img src="./images/templates/charts-6.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-7">
-        <img src="./images/templates/charts-7.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-8">
-        <img src="./images/templates/charts-8.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
-      <figure class="js-snippet w-1/2 p-2 st-charts" id="charts-9">
-        <img src="./images/templates/charts-9.png" alt=""
-          class="border border-grey-light cursor-move hover:shadow-md transition-normal hover:translate-y-1 hover:border-black" />
-      </figure>
+    <!-- preloader -->
+    <div id="snippet-preloader" class="fixed bg-white" style="width:50%; height: 100%">
+      <div class="flex flex-col items-center justify-center" style="height: 100%">
+        <div class="flex"> loading snippets ...</div>
+        <div class="text-center"> <img src="./images/dots-loader.gif" alt="" style="width:50%"> </div>
+      </div>
+
+    </div>
+    <div id="snippet-set" class="js-snippets inline-flex flex-wrap flex-col items-start justify-start"
+      style="margin-top: 100px;">
     </div>
   </section>
 
