added css guide

--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -65,10 +65,17 @@
   <!-- the composition canvas section -->
   <section class=" px-8 py-2 pb-0 w-1/2 flex flex-col fixed pin-t pin-b pin-r" style="border-left: 1px solid #bfbfbf">
     <header class="mb-4 text-center">
+      <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
       <button class="shadow text-center py-3 px-4 bg-black hover:text-green text-white js-download transition-normal"
         style="display: inline-block; border-radius: 45px; font-size: 0.86em;">
         Generate HTML + CSS
       </button>
+      <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
+      <a href="https://v0.tailwindcss.com/docs/what-is-tailwind/" target="_blank"
+        class="text-center py-3 px-4 bg-white hover:text-black text-black no-underline"
+        style="display: inline-block; border-radius: 45px; border: 1px solid grey; font-size: 0.86em;">
+        CSS Guide
+      </a>
     </header>
 
 
@@ -84,9 +91,11 @@
       Delete <i class="far fa-trash-alt pointer-events-none"></i>
     </div>
 
-    <div class="fixed bg-white" style="z-index: 100; bottom: 8px; font-size: 0.7em; text-align: center; color: grey;">
-      by <a href="http://trendydots.com/project" target="_blank" style="color: orange;">trendydots</a>. adapted from <a
-        href="https://www.amie-chen.com/" target="_blank" style="color: grey;"> Amie Chen</a>'s stitches project
+    <div class="fixed" style="z-index: 100; bottom: 8px; font-size: 0.9em; text-align: center; color: grey;">
+      by <a href="http://trendydots.com/project" target="_blank"
+        style="color: rgb(236, 156, 9); font-weight: 600">trendydots</a>. adapted from <a
+        href="https://www.amie-chen.com/" target="_blank" style="color: rgb(88, 88, 88);"> Amie Chen</a>'s stitches
+      project
     </div>
   </section>
 
