--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -16,6 +16,9 @@
     td. web stitches - A HTML template generator using functional css
   </title>
 
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
+  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
 </head>
 
 <body class="overflow-hidden font-sans" style="background: #fafafa">
@@ -100,6 +103,20 @@
   </section>
 
   <script src="public/client.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-113784035-1");
+  </script>
+
 
 </body>
 
