--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -17,8 +17,8 @@
   </title>
 
   <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
-  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://trendydots.com/css/jquery-eu-cookie-law-popup.css" />
+  <script src="https://trendydots.com/js/jquery-eu-cookie-law-popup.js"></script>
 </head>
 
 <body class="overflow-hidden font-sans" style="background: #fafafa">
