--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -21,7 +21,7 @@
   <script src="https://trendydots.com/js/jquery-eu-cookie-law-popup.js"></script>
 </head>
 
-<body class="overflow-hidden font-sans" style="background: #fafafa">
+<body class="overflow-hidden font-sans eupopup eupopup-bottom eupopup-style-compact" style="background: #fafafa">
 
   <!-- the web elements section -->
   <section class="fixed pin-l pin-t pin-b overflow-y-scroll w-1/2">
