updated td websites

--- a/invest/index.html
+++ b/invest/index.html
@@ -61,24 +61,6 @@
         <img src="./assets/img/patreon-btn.png" alt="Become a patron" style="height:45px">
       </a>
     </div>
-
-    <!-- 
-    <ul class="text-sm text-grey-dark list-reset flex items-center">
-      
-      <li>
-        <a href="https://trendydots.com" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Main Page</a>
-      </li>
-     
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
-    <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
-    <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-   
-      <a href="#subscribe-section" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
-        Contact
-      </a>
-
-    </ul>
-     -->
   </nav>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
@@ -123,7 +105,8 @@
 
 
   <!-- Form -->
-  <section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8" id="subscribe-section">
+  <section class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
+    style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
       <h3 class="text-2xl">Join our journey</h3>
       <p class="">
@@ -134,67 +117,17 @@
         and you get to: use the platform, offer feedback, have access to all training videos and so much more.
       </p>
       <br>
-      <div class="w-full text-center">
-        <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
-          data-aos="fade-in">Become a
-          Patron!</a>
+      <div class="w-full flex flex-col text-center items-center justify-center">
+        <img src="../innovator-patron.png" style="height: 130px;" alt="">
+        <br>
+        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
+          href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
+          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;
+          <span style="white-space: nowrap;"> Become an Innovator patron</span>
+        </a>
       </div>
       <br>
-      <!-- New form 
-      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8"
-        action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" data-aos="fade-up">
-        <div class="w-full text-center"> Not convinced? Stay in touch with our progress. Register to our newsletter
-        </div>
-        <br>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="firstname" name="firstname"
-            type="text" required style="height: 5em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="firstname"
-            style="color: black;">
-            Your first name
-          </label>
-        </div>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
-            required style="height: 5em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email"
-            style="color: black;">
-            Your email
-          </label>
-        </div>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="affiliation" name="affiliation"
-            type="text" required style="height: 5em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
-            style="color: black;">
-            Your affiliation
-          </label>
-        </div>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation"
-            name="fieldRelation" type="text" style="height: 6em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
-            style="color: black;">
-            How are you related to the standard reporting or market reserach field?
-          </label>
-        </div>
-
-        <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
-        <input type="hidden" name="comment" value="td. market research contact" />
-        <br />
-        <div class="flex items-center justify-between">
-          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit"
-            style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
-            Submit
-          </button>
-          <span style="font-size:12px">
-            by submitting this information you agree to our
-            <a href="../privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
-          </span>
-        </div>
-      </form>
-
-          -->
     </div>
   </section>
 
