--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -60,9 +60,9 @@
     </span>
 
     <div class="flex">
-      <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
-        data-aos="fade-in">Become a
-        Patron!</a>
+      <a style="display: inline;" href="https://www.patreon.com/bePatron?u=14590376">
+        <img src="../../patreon-btn.png" alt="Become a patron" style="height:45px">
+      </a>
     </div>
 
     <ul class="text-sm text-grey-dark list-reset flex items-center">
