--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
               <img src="./mw1.png" style="max-height:250px" alt=""> </div>
             <div class="flex flex-col justify-center text-left px-4">
               <h3 class="mb-2">1. a big idea - early stage prototyping</h3>
-              <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">I start brainstorming for ideas
+              <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">
+                I start brainstorming for ideas
                 until the
                 light
                 bulb shines.
@@ -156,7 +157,7 @@
             <div class="flex flex-col justify-center text-left px-4">
               <h3 class="mb-2"> 3. can I do better? - analytics and feedback based improvements </h3>
               <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">
-                Here is where your opinons and contributions are put to good use. I encourage yout to become an active
+                Here is where your opinions and contributions are put to good use. I encourage you to become an active
                 <b>patron</b>
                 Please write your feedback and improvement suggestions. I will consider your desired changes.
               </p>
@@ -222,7 +223,7 @@
 
   <!-- features-1 -->
   <div class="w-full" style="background: #fff; padding-bottom: 20px;">
-    <!-- Web Stitiches-->
+    <!-- Web Stitches-->
     <section
       class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
@@ -230,12 +231,12 @@
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitiches</h2>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitches</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
           A web application that helps you rapidly design a landing page or an editorial website.
           Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
           pages.
-          It takes seconds to experiment with diferent layouts.
+          It takes seconds to experiment with different layouts.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
             href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
@@ -257,7 +258,7 @@
           A series of experiments around AI text processing. Summarizing language independent texts, extracting tokens,
           hashtag autosuggest and so much more.
           <br><br>
-          The first experiment autmatically summarizes text.
+          The first experiment automatically summarizes text..
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
             href="/research/nlp/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
