--- a/project.html
+++ b/project.html
@@ -6,10 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>trendy dots</title>
-  <meta name="author" content="trendydots">
+  <meta name="author" content="Cristian-Dan Baras">
   <meta name="description"
-    content="Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We model the internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative AI algorithms." />
+    content="Trendy Dots is a project developing fun applications for data science, data visualization and user experience." />
   <meta name="keywords" content="digital lab, exploratory data analysis, behavioural economics, trend analysis" />
+  <meta property="og:title" content="Trendy Dots" />
+  <meta property="og:description"
+    content="Trendy Dots is a project developing fun applications for data science, data visualization and user experience. " />
+  <meta property="og:image" content="./1.png" />
+
   <link rel="shortcut icon" href="logo.png">
 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
