--- a/mobile-stitches/index.html
+++ b/mobile-stitches/index.html
@@ -74,7 +74,7 @@
         Generate HTML + CSS
       </button>
       <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
-      <a href="https://v0.tailwindcss.com/docs/what-is-tailwind/" target="_blank"
+      <a href="https://materializecss.com/getting-started.html" target="_blank"
         class="text-center py-3 px-4 bg-white hover:text-black text-black no-underline"
         style="display: inline-block; border-radius: 45px; border: 1px solid grey; font-size: 0.86em;">
         CSS Guide
@@ -82,12 +82,16 @@
     </header>
 
     <div class="flex flex-col" style="height: 620px; width: 500px; margin: 0 auto;">
-      <!-- 
-      <div class="text-right px-4 py-4" style="background:#B0BEC5; border-radius: 30px 30px 0 0;
-      -webkit-box-shadow: 0px -12px 35px 1px rgba(148,148,148,0.42);
-      -moz-box-shadow: 0px -12px 35px 1px rgba(148,148,148,0.42);
-      box-shadow: 0px -12px 35px 1px rgba(148,148,148,0.42);"> 
-      </div>-->
+      <div class="flex flex-col flex-1 border" style="background: #ECEFF1;
+      border: 2px solid #E0E0E0;
+      position: absolute;
+      width: 320px;
+      height: 565px;
+      margin-top: 96px;
+      margin-left: 69px;
+      box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+      ">
+      </div>
       <img src="./images/demo-phone2.png" style="
         position: absolute;
         width: 460px;
