--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="PRAGMA" content="NO-CACHE">
   <title>trendy dots</title>
   <meta name="author" content="Cristian-Dan Baras">
   <meta name="description"
