--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="shortcut icon" href="logo.png">
 
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
 
   <link href=https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.6.3/css/all.css
