--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="keywords" content="digital lab, experiment, ui, ux, prototyping, composition" />
+  <meta property="og:title" content="Trendy Dots - Web Stitches" />
+  <meta property="og:description"
+    content="Trendy Dots is a project developing fun applications for data science, data visualization and user experience. " />
+  <meta property="og:image" content="../tdwebst.jpeg" />
   <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700,800,900" rel="stylesheet" />
   <link rel="stylesheet" href="./public/dragula.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
