--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -32,7 +32,7 @@
   <section class="fixed pin-l pin-t pin-b overflow-y-scroll w-1/2">
     <div class="fixed font-black bg-white w-1/2 mb-3 " style="z-index: 100">
       <h2 class="pb-2 pt-1 mx-3" style="font-weight: 800; display: flex; flex-direction: row">
-        <a href="/project" class="no-underline text-black transition" style="line-height: 1.8em">
+        <a href="/" class="no-underline text-black transition" style="line-height: 1.8em">
           <img src="https://trendydots.com/logo.png" class="inline-block mr-2 w-10 -mb-2" />web stitches</a>
         <div style="flex:auto"></div>
         <a style="display: inline;" href="https://www.patreon.com/bePatron?u=14590376">
