--- a/invest/index.html
+++ b/invest/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
-  <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css
     integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp crossorigin="anonymous">
-  <title>trendy dots - research</title>
+  <title>trendy dots - trend research</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
   <link rel="stylesheet" href="./assets/css/aos.css" />
 
@@ -51,16 +51,33 @@
       </a>
       &nbsp;
       <b class="text-lg flex text-left" style="font-size: 1.35rem;">
-        <span style="color: #606f7b; display: inline; text-indent: 0.2em">research
+        <span style="color: #606f7b; display: inline; text-indent: 0.2em">trend research
         </span>
       </b>
     </span>
 
-    <div class="flex">
-      <a style="display: inline;" href="https://www.patreon.com/bePatron?u=14590376">
-        <img src="./assets/img/patreon-btn.png" alt="Become a patron" style="height:45px">
-      </a>
-    </div>
+
+    <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
+      <li>
+        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
+          href="https://www.patreon.com/bePatron?u=14590376" target="_blank">
+          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;
+          <span> Become a patron</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="https://www.paypal.me/trendydots" target="_blank"
+          class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
+          <img src="../paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;&nbsp;
+          <span> Donate one time</span>
+        </a>
+      </li>
+
+    </ul>
+
   </nav>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
@@ -107,7 +124,7 @@
   <!-- Form -->
   <section class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
-    <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
+    <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
       <h3 class="text-2xl">Join our journey</h3>
       <p class="">
         As we are working hard to achieve a great quality platform, we need
@@ -179,17 +196,16 @@
         <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo" />
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
-        <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
+        <h4 class="py-2 uppercase font-bold tracking-wide">About</h4>
         <p>
-          Trendy Dots is an ambitious project making trend and exploratory
-          data analysis on the new and old markets. We model the internet
-          behaviour and forecast the evolution of markets, products,
-          companies, etc. using innovative AI algorithms.
+          Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
+          experience. I playfully apply UX and data science best practices to big data, aiming to produce high value
+          tools.
         </p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
         <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">
-          Follow Us
+          Follow
         </h4>
         <div class="flex pl-0 md:pl-4 justify-start">
           <!-- 
