--- a/invest/index.html
+++ b/invest/index.html
@@ -223,7 +223,9 @@
       ©2019 trendydots.com All rights reserved. &nbsp;
       <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
-      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
+      <a href="../terms-of-service.html" target="_blank" style="color:#000"> Terms of service</a>
+      &nbsp;
+      <a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">Impressum</a>
     </div>
   </footer>
 
