--- a/privacy-statement.html
+++ b/privacy-statement.html
@@ -176,19 +176,13 @@
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
         <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
-        <p>Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old
-          markets. We
-          model the internet behaviour and forecast the evolution of markets, products, companies, etc. using
-          innovative
-          AI algorithms. </p>
+        <p>Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
+          experience. I playfully apply UX and data science best practices to big data, aiming to produce high value
+          tools.</p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
         <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">Follow Us</h4>
         <div class="flex pl-0 md:pl-4 justify-start">
-          <!-- 
-          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
-          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
-         -->
           <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank"
             href="https://twitter.com/trendydots">
             <i class="fab fa-twitter"></i>
