--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="PRAGMA" content="NO-CACHE">
   <title>trendy dots</title>
   <meta name="author" content="Cristian-Dan Baras">
   <meta name="description"
@@ -17,7 +18,7 @@
 
   <link rel="shortcut icon" href="logo.png">
 
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
 
   <link href=https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.6.3/css/all.css
@@ -59,7 +60,7 @@
       <span>td<span style="color:#F2D024">.</span> </span>
       <span style="font-weight: 600;"> trendy dots</span>
     </a>
-    <ul class="text-sm text-grey-dark list-reset flex items-center md:flex-row flex-col">
+    <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
       <li>
         <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
           href="https://www.patreon.com/bePatron?u=14590376" target="_blank">
@@ -68,16 +69,16 @@
           <span> Become a patron</span>
         </a>
       </li>
-      <!-- 
+
       <li>
-        <a
-          class="btn bg-white border border-blue cursor-pointer text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
+        <a href="https://www.paypal.me/trendydots" target="_blank"
+          class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
           <img src="./paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;
+          &nbsp;&nbsp;
           <span> Donate one time</span>
         </a>
       </li>
-      -->
+
     </ul>
   </nav>
 
@@ -190,7 +191,7 @@
         </div>
 
         <h1 class="leading-normal mb-2 text-center te">
-          Support the project
+          Cool people support the project 😎
         </h1>
         <br><br>
         <div class="flex md:flex-row flex-col items-center justify-center mb-8">
@@ -202,18 +203,17 @@
               <span style="white-space: nowrap;"> Become a patron</span>
             </a>
           </div>
-          <!-- 
-          <div class="md:w-1/2  flex flex-col">
-            <a
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <div class="flex flex-col">
+            <a href="https://www.paypal.me/trendydots" target="_blank"
               class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
               <img src="./paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
-              &nbsp;
+              &nbsp;&nbsp;
               <span> Donate one time</span>
             </a>
           </div>
         </div>
-        -->
-        </div>
+      </div>
   </section>
 
   <!-- Projects -->
@@ -332,6 +332,9 @@
             statement</a></li>
         <li><a href="./terms-of-service.html" target="_blank" class="inline-block py-2 px-3 text-black">Terms of
             service</a>
+        </li>
+        <li><a href="./imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">
+            Impressum</a>
         </li>
       </ul>
     </div>
