--- a/index.html
+++ b/index.html
@@ -333,6 +333,9 @@
         <li><a href="./terms-of-service.html" target="_blank" class="inline-block py-2 px-3 text-black">Terms of
             service</a>
         </li>
+        <li><a href="./imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">
+            Impressum</a>
+        </li>
       </ul>
     </div>
   </footer>
