--- a/research/index.html
+++ b/research/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
-  <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css
     integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp crossorigin="anonymous">
-  <title>trendy dots - market research</title>
+  <title>trendy dots - trend research</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
   <link rel="stylesheet" href="./assets/css/aos.css" />
 
@@ -40,7 +40,7 @@
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" data-aos-easing="ease" data-aos-delay="300"
   data-aos="fade-in">
   <nav
-    class="font-sans bg-white text-center flex md:justify-between items-center p-4 container overflow-hidden flex-col md:flex-row"
+    class="font-sans bg-white text-center flex md:justify-between items-center md:flex-row flex-col px-4 py-2 container overflow-hidden"
     style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100; 
@@ -51,48 +51,49 @@
       </a>
       &nbsp;
       <b class="text-lg flex text-left" style="font-size: 1.35rem;">
-        market
-        <span style="color: #FFCA28; display: inline; text-indent: 0.2em">research
+        <span style="color: #606f7b; display: inline; text-indent: 0.2em">trend research
         </span>
       </b>
     </span>
 
-    <div class="flex">
-      <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
-        data-aos="fade-in">Become a
-        Patron!</a>
-    </div>
 
-    <ul class="text-sm text-grey-dark list-reset flex items-center">
-      <!-- 
+    <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
       <li>
-        <a href="https://trendydots.com" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Main Page</a>
+        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
+          href="https://www.patreon.com/bePatron?u=14590376" target="_blank">
+          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;
+          <span> Become a patron</span>
+        </a>
       </li>
-     
-    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
-    <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
-    <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-    -->
-      <a href="#subscribe-section" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
-        Contact
-      </a>
+
+      <li>
+        <a href="https://www.paypal.me/trendydots" target="_blank"
+          class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
+          <img src="../paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;&nbsp;
+          <span> Donate one time</span>
+        </a>
+      </li>
 
     </ul>
+
   </nav>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
-      <img src="./assets/img/in0.png" alt="" data-aos="fade-in" />
+      <img src="./assets/img/in0.png" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
         Information empowers good decisions.
       </h1>
-      <br />
       <p class="leading-normal mb-4 ">
+        An ambitious project aiming to make story discovery as easy as possible. When you are starting your article,
+        data trends are essential. With the trendy dots platform you will get insights into new stories and new trends
+        <br> <br>
         We offer an intuitive, easy to use way for getting informed about the
-        things that matter. When you are investing in equity, getting news
-        about the companies and products you own is essential.
+        things that matter.
       </p>
     </div>
   </section>
@@ -115,84 +116,57 @@
       </p>
     </div>
     <div class="w-full lg:w-1/2">
-      <img src="./assets/img/in3.png" alt="" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" data-aos="fade-in" />
+      <img src="./assets/img/in3.png" alt="" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" />
     </div>
   </section>
 
+
   <!-- Form -->
-  <section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8" id="subscribe-section">
-    <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
+  <section class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
+    style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
+    <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
       <h3 class="text-2xl">Join our journey</h3>
       <p class="">
         As we are working hard to achieve a great quality platform, we need
-        your expert opinion. Subscribing to the news means you will receive
-        emails with our progress and surveys where you can offer feedback. Be among the first patreon users to watch all
-        training videos. Becoming a parteon means you
-        are automatically included in the early platform adopter program and
-        have a chance to be selected for the beta testing session.
+        your expert opinion. Follow our patreon posts to keep up with developments. Becoming a Supporter patron gives
+        you first access to our donation enabled freemium experiments.
+        Being an Innovator or Angel patron means you are automatically included in the early platform adopter program
+        and you get to: use the platform, offer feedback, have access to all training videos and so much more.
       </p>
       <br>
-      <div class="w-full text-center">
-        <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
-          data-aos="fade-in">Become a
-          Patron!</a>
+      <div class="w-full flex flex-col text-center items-center justify-center">
+        <img src="../innovator-patron.png" style="height: 130px;" alt="">
+        <br>
+        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
+          href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
+          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;
+          <span style="white-space: nowrap;"> Become an Innovator patron</span>
+        </a>
       </div>
       <br>
-      <!-- New form -->
-      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8"
-        action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" data-aos="fade-up">
-        <div class="w-full text-center"> Not convinced? Stay in touch with our progress. Register to our newsletter
-        </div>
-        <br>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="firstname" name="firstname"
-            type="text" required style="height: 5em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="firstname"
-            style="color: black;">
-            Your first name
-          </label>
-        </div>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
-            required style="height: 5em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email"
-            style="color: black;">
-            Your email
-          </label>
-        </div>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="affiliation" name="affiliation"
-            type="text" required style="height: 5em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
-            style="color: black;">
-            Your affiliation
-          </label>
-        </div>
-        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation"
-            name="fieldRelation" type="text" style="height: 6em;" />
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
-            style="color: black;">
-            How are you related to the standard reporting or market reserach field?
-          </label>
-        </div>
-
-        <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
-        <input type="hidden" name="comment" value="td. market research contact" />
-        <br />
-        <div class="flex items-center justify-between">
-          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit"
-            style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
-            Submit
-          </button>
-          <span style="font-size:12px">
-            by submitting this information you agree to our
-            <a href="../privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
-          </span>
-        </div>
-      </form>
+    </div>
+  </section>
 
 
+  <section style="margin-top:5em"
+    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
+      <img src="../invest/assets/img/inE1.png" alt="" />
+    </div>
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+      <h1 class="my-4 font-normal text-grey-darker">
+        NEW! Try out our summarisation tool for free
+      </h1>
+      <br />
+      <p class="leading-normal mb-4 ">
+        With this new experimental tool we aim to summarize a large text into a small paragraph. The experiment succeeds
+        if the summary ratio is less than 60%. If you are interested in our research, please visit our Patreon page.
+      </p>
+      <a href="/research/nlp/" id="summarizeBtn" class="hover:bg-grey-lighter no-underline" target="_blank"
+        style="text-align: center; border: 2px solid black; padding: 1em; box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
+        Try for free
+      </a>
     </div>
   </section>
 
@@ -222,17 +196,16 @@
         <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo" />
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
-        <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
+        <h4 class="py-2 uppercase font-bold tracking-wide">About</h4>
         <p>
-          Trendy Dots is an ambitious project making trend and exploratory
-          data analysis on the new and old markets. We model the internet
-          behaviour and forecast the evolution of markets, products,
-          companies, etc. using innovative AI algorithms.
+          Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
+          experience. I playfully apply UX and data science best practices to big data, aiming to produce high value
+          tools.
         </p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
         <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">
-          Follow Us
+          Follow
         </h4>
         <div class="flex pl-0 md:pl-4 justify-start">
           <!-- 
@@ -251,6 +224,8 @@
       <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
       <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
+      &nbsp;
+      <a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">Impressum</a>
     </div>
   </footer>
 
@@ -272,7 +247,6 @@
     gtag("config", "UA-113784035-1");
   </script>
 
-  <script src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
 </body>
 
 </html>
