--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -217,6 +217,8 @@
       <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
       <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
+      &nbsp;
+      <a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">Impressum</a>
     </div>
   </footer>
 
