--- a/imprint.html
+++ b/imprint.html
@@ -26,7 +26,7 @@
   </nav>
 
   <section class="font-sans container m-auto flex flex-col py-8 max-w-xl text-center px-6" style="margin-top: 65px;">
-    <h1 class="my-8 max-w-full m-auto text-3xl md:text-4xl lg:text-5xl font-medium">Imprint</h1>
+    <h1 class="my-8 max-w-full m-auto text-3xl md:text-4xl lg:text-5xl font-medium">Impressum</h1>
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
       Diese Erklärung gilt für alle Produkte und Dienstleistungen von Trendy Dots.
       Trendy Dots und sein gesamter Service gehören Cristian-Dan Bara e.U - Stranzenberggasse 18, 1130, Wien, Österreich
