--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       ">
       <br><br><br>
       <div>
-        <h1 class="my-4 font-normal" style="font-weight: 700;
+        <h1 class="my-4 font-normal" style="font-weight: 700; margin-bottom: 2rem;
       font-size: 8vh; color: #757575">the story</h1>
         <p class="leading-normal mb-2 text-base md:text-lg xl:text-xl ">
           Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
