--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -25,7 +25,7 @@
   </script>
 </head>
 
-<body>
+<body class="eupopup eupopup-bottom eupopup-style-compact">
   <nav
     class="font-sans md:shadow-none md:bg-transparent bg-white shadow text-center fixed flex justify-between py-4 px-8 overflow-hidden w-full flex-col md:flex-row"
     style="margin-bottom: 5px; z-index: 10; top:0; padding-left: 3%;
