added sample articles

--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -75,7 +75,8 @@
         <span style="white-space: nowrap;"> Try it, it's FREE </span>
       </a>
       <br><br>
-      <iframe class="w-full rounded shadow-md" src="https://www.youtube.com/embed/frEiVOU1dak" frameborder="0"
+
+      <iframe class="w-full rounded shadow-md" src="https://www.youtube-nocookie.com/embed/frEiVOU1dak" frameborder="0"
         allow="autoplay; gyroscope;" allowfullscreen style="height: 450px; max-width: 790px;"></iframe>
       <br><br>
 
