--- a/invest/index.html
+++ b/invest/index.html
@@ -148,7 +148,57 @@
     </div>
   </section>
 
+  <section class="bg-white py-4 font-sans">
+    <h3 class="font-medium text-grey-darkest mb-4 text-center text-2xl py-4"> Written using td. trend research </h3>
 
+    <div class="container max-w-xl m-auto flex flex-wrap items-center justify-start">
+
+      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div
+          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
+          <img class="w-full" style="padding: 25px 0;" src="./assets/img/candf.png" alt="Sunset in the mountains">
+          <div class="p-6 flex flex-col justify-between ">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
+              Cleantech & Fintech</h3>
+            <p class="inline-flex items-center">
+              <a href="https://medium.com/@research.trendydots/cleantech-fintech-275ffb2c0a44" target="_blank"
+                class="text-grey-dark text-sm no-underline">Read on Medium</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div
+          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
+          <img class="w-full" src="./assets/img/shandha.png" alt="Sunset in the mountains">
+          <div class="p-6 flex flex-col justify-between ">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
+              Smart Home vs. Home Automation</h3>
+            <p class="inline-flex items-center">
+              <a href="https://medium.com/@research.trendydots/smart-home-vs-home-automation-403df3b2f7ae"
+                target="_blank" class="text-grey-dark text-sm no-underline">Read on Medium</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div
+          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
+          <img style="padding: 36px 0;" class="w-full" src="./assets/img/aiandet.png" alt="Sunset in the mountains">
+          <div class="p-6 flex flex-col justify-between ">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">AI and Ethics</h3>
+            <p class="inline-flex items-center">
+              <a href="https://medium.com/@research.trendydots/ai-and-ethics-eace9f56710e" target="_blank"
+                class="text-grey-dark text-sm no-underline">Read on Medium</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
